# RuView

./: README.md
.github/workflows/: sensing-server-docker.yml
api-docs/: ADR-110-BRANCH-STATE.md  ADR-110-REVIEW-GUIDE.md  RELEASE-streaming-engine-v0.3.0.md  TROUBLESHOOTING.md  WITNESS-LOG-028.md  WITNESS-LOG-110.md  build-guide.md  proof-of-capabilities.md  readme-details.md  security-audit-wasm-edge-vendor.md  user-guide-apple-homepod.md  user-guide.md  wifi-mat-user-guide.md
api-docs/adr/: .issue-177-body.md  ADR-001-wifi-mat-disaster-detection.md  ADR-002-ruvector-rvf-integration-strategy.md  ADR-003-rvf-cognitive-containers-csi.md  ADR-004-hnsw-vector-search-fingerprinting.md  ADR-005-sona-self-learning-pose-estimation.md  ADR-006-gnn-enhanced-csi-pattern-recognition.md  ADR-007-post-quantum-cryptography-secure-sensing.md  ADR-008-distributed-consensus-multi-ap.md  ADR-009-rvf-wasm-runtime-edge-deployment.md  ADR-010-witness-chains-audit-trail-integrity.md  ADR-011-python-proof-of-reality-mock-elimination.md  ADR-012-esp32-csi-sensor-mesh.md  ADR-013-feature-level-sensing-commodity-gear.md  ADR-014-sota-signal-processing.md  ADR-015-public-dataset-training-strategy.md  ADR-016-ruvector-integration.md  ADR-017-ruvector-signal-mat-integration.md  ADR-018-esp32-dev-implementation.md  ADR-019-sensing-only-ui-mode.md  ADR-020-rust-ruvector-ai-model-migration.md  ADR-021-vital-sign-detection-rvdna-pipeline.md  ADR-022-windows-wifi-enhanced-fidelity-ruvector.md  ADR-023-trained-densepose-model-ruvector-pipeline.md  ADR-024-contrastive-csi-embedding-model.md  ADR-025-macos-corewlan-wifi-sensing.md  ADR-026-survivor-track-lifecycle.md  ADR-027-cross-environment-domain-generalization.md  ADR-028-esp32-capability-audit.md  ADR-029-ruvsense-multistatic-sensing-mode.md  ADR-030-ruvsense-persistent-field-model.md  ADR-031-ruview-sensing-first-rf-mode.md  ADR-032-multistatic-mesh-security-hardening.md  ADR-033-crv-signal-line-sensing-integration.md  ADR-034-expo-mobile-app.md  ADR-035-live-sensing-ui-accuracy.md  ADR-036-rvf-training-pipeline-ui.md  ADR-037-multi-person-pose-detection.md  ADR-038-sublinear-goal-oriented-action-planning.md  ADR-039-esp32-edge-intelligence.md  (+132 more)
api-docs/benchmarks/: homecore-vs-home-assistant.md  mmfi-wifi-sensing-study.md  person-count-cog.md  pose-estimation-cog.md  wifi-pose-efficiency-frontier.md
api-docs/ddd/: README.md  chci-domain-model.md  deployment-platform-domain-model.md  hardware-platform-domain-model.md  ruvsense-domain-model.md  rvcsi-domain-model.md  sensing-server-domain-model.md  signal-processing-domain-model.md  training-pipeline-domain-model.md  wifi-mat-domain-model.md
api-docs/design/: HOMECORE-FRONTEND-design-recon.md
api-docs/edge-modules/: README.md  adaptive-learning.md  ai-security.md  autonomous.md  building.md  core.md  esp32_boot_log.txt  exotic.md  industrial.md  medical.md  retail.md  security.md  signal-intelligence.md  spatial-temporal.md
api-docs/huggingface/: MODEL_CARD.md
api-docs/integration/: calibration-appliance-integration.md
api-docs/integrations/: benchmarks.md  home-assistant.md  pypi-release.md  (+1 more)
scripts/: align-ground-truth.js
v2/crates/wifi-densepose-bfld/: Cargo.toml
v2/crates/wifi-densepose-bfld/examples/: bfld_minimal.rs
v2/crates/wifi-densepose-bfld/tests/: event_gating_irreversibility.rs  example_minimal.rs
v2/crates/wifi-densepose-wasm-edge/: Cargo.toml
v2/crates/wifi-densepose-wasm-edge/src/: ais_behavioral_profiler.rs  ais_prompt_shield.rs  aut_psycho_symbolic.rs  aut_self_healing_mesh.rs  bld_elevator_count.rs  bld_energy_audit.rs  bld_hvac_presence.rs  bld_lighting_zones.rs  bld_meeting_room.rs  exo_breathing_sync.rs  exo_dream_stage.rs  exo_emotion_detect.rs  exo_gesture_language.rs  exo_ghost_hunter.rs  exo_happiness_score.rs  exo_hyperbolic_space.rs  exo_music_conductor.rs  exo_plant_growth.rs  exo_rain_detect.rs  exo_time_crystal.rs  ind_clean_room.rs  ind_confined_space.rs  ind_forklift_proximity.rs  ind_livestock_monitor.rs  ind_structural_vibration.rs  intrusion.rs  lib.rs  lrn_anomaly_attractor.rs  lrn_dtw_gesture_learn.rs  lrn_ewc_lifelong.rs  lrn_meta_adapt.rs  med_cardiac_arrhythmia.rs  med_gait_analysis.rs  med_respiratory_distress.rs  med_seizure_detect.rs  med_sleep_apnea.rs  occupancy.rs  qnt_interference_search.rs  qnt_quantum_coherence.rs  ret_customer_flow.rs  (+22 more)
(+161 files in other folders)
